// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateCustomTransactionLink with deposit matches the snapshot 1`] = `
<button
  class="css-1p8w3ca"
  color="#708F63"
  type="text"
>
  ?
</button>
`;

exports[`CreateCustomTransactionLink with dispense matches the snapshot 1`] = `
<button
  class="css-nyzi8n"
  color="#B67138"
  type="text"
>
  ?
</button>
`;
